<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OldPatientActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_signup_01"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/omg"
            tools:srcCompat="@drawable/omg"
            android:contentDescription="@string/todo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Phone number"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/op_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text=""
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/black"
            android:background="@drawable/box"/>

        <TextView
            android:id="@+id/textview_signup_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update patient details"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/name"
                    android:textColorHint="#AF1449">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#AF1449" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_age"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/age"
                    android:textColorHint="#AF1449">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#AF1449" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

           <!-- <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rugi_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:hint="Phone number"
                android:textColorHint="#AF1449"
                tools:ignore="HardcodedText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColorHint="#AF1449" />

            </com.google.android.material.textfield.TextInputLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_gender"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/gender"
                    android:textColorHint="#AF1449">

                    <AutoCompleteTextView
                        android:id="@+id/op_atv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_pulse"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Pulse"
                    android:textColorHint="#AF1449">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#AF1449" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_bp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="BP (mmHg)"
                    android:textColorHint="#AF1449">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#AF1449" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_temp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Temp (F)"
                    android:textColorHint="#AF1449">
                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#AF1449" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_weight"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Weight (kg)"
                    android:textColorHint="#AF1449">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColorHint="#AF1449" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/op_height"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="Height (cm)"
                    android:textColorHint="#AF1449">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textColorHint="#AF1449" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/go_pres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/teal_700"
                android:text="Next"/>



            <ProgressBar
                android:id="@+id/Progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="invisible" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>